--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-*.class
-
 # Package Files #
-*.jar
+target/**/*.jar
 *.war
+*.class
 
 # gwt caches and compiled units #
 war/gwt_bree/
 gwt-unitCache/
+*/.gwt/
+*/gen*
 
 # boilerplate generated classes #
 .apt_generated/
@@ -15,16 +16,47 @@ gwt-unitCache/
 war/WEB-INF/deploy/
 war/WEB-INF/classes/
 
-#compilation logs
-.gwt/
+# maven #
+target/
 
-#caching for already compiled files
-gwt-unitCache/
+# intellij generated files #
+*.iml
+*.ipr
+*.iws
+.idea/
+velocity_implicit.vm
 
-#gwt junit compilation files
-www-test/
+# Eclipse generated files #
+*.pydevproject
+.project
+.metadata
+bin/**
+tmp/**
+tmp/**/*
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+*.ucls
 
-#old GWT (1.5) created this dir
-.gwt-tmp/
+# External tool builders
+.externalToolBuilders/
 
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# CDT-specific
+.cproject
+
+# PDT-specific
+.buildpath
+
+# OS X generated files #
 .DS_Store
+
+# Others
+*.log
