--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
             <resource>
                 <directory>${basedir}/src/main/java</directory>
             </resource>
+			<resource>
+                <directory>${basedir}/src/main/resources</directory>
+            </resource>
         </resources>
     </build>
 
